# Explainable-AI

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/application/ports/: gateways.py
app/application/use_cases/: conversation.py  documents.py  onboard_user.py  portfolio.py  recommendation.py
app/core/: container.py  i18n_ru.py  logging.py  settings.py
app/domain/entities/: enums.py  models.py
app/domain/ports/: repositories.py
app/infrastructure/db/: models.py  session.py
app/infrastructure/gateways/: market_data_gateway.py  news_gateway.py  openai_gateway.py  redis_cache.py
app/infrastructure/graph/: recommendation_graph.py
app/infrastructure/rag/: faiss_repository.py
app/infrastructure/repositories/: document_repository.py  sqlalchemy_repositories.py
app/presentation/api/: conversations.py  deps.py  documents.py  recommendations.py  search.py  users.py
app/presentation/schemas/: common.py  conversations.py  recommendations.py  users.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/ui/: card.tsx  (+1 more)
frontend/src/i18n/: index.ts  ru.ts  useTranslation.ts
frontend/src/lib/: api.ts
frontend/src/pages/: dashboard.tsx  documents.tsx  portfolio.tsx  profile.tsx  recommendations.tsx  search.tsx
frontend/src/types/: api.ts
tests/: test_domain_models.py  test_health.py  test_news_gateway.py  test_onboard_user.py
