[tool.poetry]
name = "investment-recommendations"
version = "0.1.0"
description = "Personalized investment advisor with explainable AI"
authors = ["AI University <dev@local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "3.12.6"
fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sse-starlette = "^2.1.3"
langchain = "^0.3.27"
langgraph = "^0.2.55"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.27"
openai = "^1.59.4"
faiss-cpu = "^1.9.0.post1"
yfinance = "^0.2.54"
duckduckgo-search = "^6.3.7"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
redis = "^5.2.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
email-validator = "^2.2.0"
structlog = "^25.1.0"
python-multipart = "^0.0.20"
pypdf = "^5.1.0"
orjson = "^3.10.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
